Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14218

Explicit reference to typedef from template base not recognized

XMLWordPrintable

    • 372173331c689474b2ca7002a1d7ed770b052b80

      struct Foo { int bar; };
      
      template<typename T>
      struct Base { typedef T F; };
      
      template<typename T>
      struct Derived : Base<T>
      {
          typedef typename Base<T>::F F;
          F f;
      };
      
      void func()
      {
          Derived<Foo> d;
          d.f.bar; // bar not highlighted
      }

        For Gerrit Dashboard: QTCREATORBUG-14218
        # Subject Branch Project Status CR V

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes